[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alacritty_terminal = "*"
libc = "0.2"
pretty_env_logger = "0.4"
log = "0.4"
signal-hook = "0.3"
crossterm = "0.25"
backtrace = "0.3"

